# learning-blocks-web-server07

./: Makefile  README.md  main.py  pyproject.toml  test_templates.py  test_unit.py
localdev/: backend.Dockerfile  docker-compose.yaml
static/: init.js  styles.css
templates/: home.html  report.html
