[tool.poetry]
name = "learning-blocks-web-server07"
version = "0.1.0"
description = ""
authors = ["Nate Bass"]
readme = "README.md"
#packages = [{include = "learning_blocks_web_server07"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
